plugins {
    id("java")
    id("groovy")
    id("org.springframework.boot").version('3.2.4')
    id('io.spring.dependency-management').version('1.1.4')
}

group = "com.carparts"
version = "1.0.0"

java {
    sourceCompatibility = "21"
}

repositories {
    mavenCentral()
}

dependencies {
    implementation("org.springframework.boot:spring-boot-starter-data-jpa:3.2.4")
    implementation("org.springframework.boot:spring-boot-starter-web:3.2.4")

    runtimeOnly("org.postgresql:postgresql:42.7.3")

    testImplementation("org.apache.groovy:groovy:4.0.20")
    testImplementation("org.spockframework:spock-core:2.4-M4-groovy-4.0")
    testImplementation("org.springframework.boot:spring-boot-starter-test:3.2.4")
}

test {
    useJUnitPlatform()
}
